...
                    android:background="@drawable/bg_nav_indicator"
                    android:visibility="gone"/>
            </FrameLayout>

            <!-- Settings Nav Item -->
            <FrameLayout
                android:id="@+id/navSettings"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_nav_item"
                android:clickable="true"
                android:focusable="true">
...
